kubernetes/roles/ceph/files/ceph-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
   - hosts:
     - ceph-dash.chaseweyer.com
     secretName: cloudflare-cert-prod
  rules:
  - host: ceph-dash.chaseweyer.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: https-dashboard
